<resources>
    <string name="app_name">M8_Ex1</string>
    <!-- Array Categorias de Incidencias -->
    <string-array name="numbers">
        <item>Baja</item>
        <item>Media</item>
        <item>Alta</item>
    </string-array>

    <!-- Layout items menu -->

    <string name="inicio">Inicio</string>
    <string name="configuracion">Configuracion</string>

    <!-- Menu Login -->

    <string name="nombre_u">Nombre Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="button_Entrar">Entrar</string>

    <!-- Botones Menu -->

    <string name="añadir">Añadir</string>
    <string name="eliminar">Eliminar</string>
    <string name="llistar">Listar</string>


    <!-- Layout Añadir -->

    <string name="hint_NameIn">Nombre de la Incidència</string>
    <string name="button_Afegir">Añadir</string>
    <string name="Text_Categoria">Categoria</string>

    <!-- Menu configuracion -->
    <string name="textRest">Reiniciar configuraciones de la app</string>
    <string name="textIdiomEs">Cambiar idioma Español</string>
    <string name="textIdiomEn">Cambiar idioma Ingles</string>
    <string name="buttonRest">Reiniciar</string>
    <string name="buttonIdiomEs">Español</string>
    <string name="buttonIdiomEn">Ingles</string>

    <!-- Alerts Dialog -->
    <string name="textTitleRes">Reinicio de configuraciones</string>
    <string name="textMessageRes">Estas seguro que quieres reiniciar todas las configuraciones ya echas?</string>

    <string name="textTitleDeleteList">Eliminar todo el contenido de tu lista</string>
    <string name="textMessageDeleteList">Estas seguro que quieres borrar todo el contenido de tu tabla?</string>

    <string name="buttonAlertYes">Si</string>
    <string name="buttonAlertNo">No</string>


    <string name="title_activity_nav__conf">Nav_Conf</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity</string>


</resources>
